{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 93,
  "lineage": "604737f7-c40f-9a86-2e8c-ba753926ab6d",
  "resources": [
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "AWSB56-eip",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0207a17858f628fc3",
            "arn": "arn:aws:ec2:us-east-1:371483153121:elastic-ip/eipalloc-0207a17858f628fc3",
            "domain": "vpc",
            "id": "eipalloc-0207a17858f628fc3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-3-221.compute-1.amazonaws.com",
            "public_ip": "54.156.3.221",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AWSB56-igw",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:internet-gateway/igw-072d2c10fea9ad9d2",
            "id": "igw-072d2c10fea9ad9d2",
            "owner_id": "371483153121",
            "region": "us-east-1",
            "tags": {
              "name": "AWSB56-internet gateway"
            },
            "tags_all": {
              "name": "AWSB56-internet gateway"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "AWSB56-ngw",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0207a17858f628fc3",
            "association_id": "eipassoc-0c00b905a1b3edefe",
            "connectivity_type": "public",
            "id": "nat-0ddd9f8449804732f",
            "network_interface_id": "eni-0d089191bd590362e",
            "private_ip": "192.168.10.66",
            "public_ip": "54.156.3.221",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0790c428d1a0c6004",
            "tags": {
              "name": "AWSB56 NAT Gateway"
            },
            "tags_all": {
              "name": "AWSB56 NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc_module1.aws_eip.AWSB56-eip",
            "module.vpc_module1.aws_subnet.public-subnet1",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:route-table/rtb-0b7ae8fbc7363dbda",
            "id": "rtb-0b7ae8fbc7363dbda",
            "owner_id": "371483153121",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ddd9f8449804732f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module1.aws_eip.AWSB56-eip",
            "module.vpc_module1.aws_nat_gateway.AWSB56-ngw",
            "module.vpc_module1.aws_subnet.public-subnet1",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:route-table/rtb-054513d5d5defd597",
            "id": "rtb-054513d5d5defd597",
            "owner_id": "371483153121",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072d2c10fea9ad9d2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module1.aws_internet_gateway.AWSB56-igw",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-private-rt-association1",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4d9483b0822567d",
            "region": "us-east-1",
            "route_table_id": "rtb-0b7ae8fbc7363dbda",
            "subnet_id": "subnet-0fb27aab8e2938b14"
          },
          "dependencies": [
            "module.vpc_module1.aws_eip.AWSB56-eip",
            "module.vpc_module1.aws_nat_gateway.AWSB56-ngw",
            "module.vpc_module1.aws_route_table.private-rt",
            "module.vpc_module1.aws_subnet.private-subnet1",
            "module.vpc_module1.aws_subnet.public-subnet1",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-private-rt-association2",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a90dc80d18735af3",
            "region": "us-east-1",
            "route_table_id": "rtb-0b7ae8fbc7363dbda",
            "subnet_id": "subnet-02e276b4ab1b87a61"
          },
          "dependencies": [
            "module.vpc_module1.aws_eip.AWSB56-eip",
            "module.vpc_module1.aws_nat_gateway.AWSB56-ngw",
            "module.vpc_module1.aws_route_table.private-rt",
            "module.vpc_module1.aws_subnet.private-subnet2",
            "module.vpc_module1.aws_subnet.public-subnet1",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-private-rt-association3",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0168176a5d33db01b",
            "region": "us-east-1",
            "route_table_id": "rtb-0b7ae8fbc7363dbda",
            "subnet_id": "subnet-0a2c3229cc4a5a975"
          },
          "dependencies": [
            "module.vpc_module1.aws_eip.AWSB56-eip",
            "module.vpc_module1.aws_nat_gateway.AWSB56-ngw",
            "module.vpc_module1.aws_route_table.private-rt",
            "module.vpc_module1.aws_subnet.private-subnet3",
            "module.vpc_module1.aws_subnet.public-subnet1",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-public-rt-association1",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014ee8a93a4f9ced5",
            "region": "us-east-1",
            "route_table_id": "rtb-054513d5d5defd597",
            "subnet_id": "subnet-0790c428d1a0c6004"
          },
          "dependencies": [
            "module.vpc_module1.aws_internet_gateway.AWSB56-igw",
            "module.vpc_module1.aws_route_table.public-rt",
            "module.vpc_module1.aws_subnet.public-subnet1",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-public-rt-association2",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b013797a801b092",
            "region": "us-east-1",
            "route_table_id": "rtb-054513d5d5defd597",
            "subnet_id": "subnet-033cf32e649e3edde"
          },
          "dependencies": [
            "module.vpc_module1.aws_internet_gateway.AWSB56-igw",
            "module.vpc_module1.aws_route_table.public-rt",
            "module.vpc_module1.aws_subnet.public-subnet2",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-public-rt-association3",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fff0878addec6f6a",
            "region": "us-east-1",
            "route_table_id": "rtb-054513d5d5defd597",
            "subnet_id": "subnet-07d317673e2291d58"
          },
          "dependencies": [
            "module.vpc_module1.aws_internet_gateway.AWSB56-igw",
            "module.vpc_module1.aws_route_table.public-rt",
            "module.vpc_module1.aws_subnet.public-subnet3",
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:subnet/subnet-0fb27aab8e2938b14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb27aab8e2938b14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371483153121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:subnet/subnet-02e276b4ab1b87a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e276b4ab1b87a61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371483153121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet2"
            },
            "tags_all": {
              "Name": "private-subnet2"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet3",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:subnet/subnet-0a2c3229cc4a5a975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2c3229cc4a5a975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "371483153121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet3"
            },
            "tags_all": {
              "Name": "private-subnet3"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:subnet/subnet-0790c428d1a0c6004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0790c428d1a0c6004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "371483153121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:subnet/subnet-033cf32e649e3edde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033cf32e649e3edde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "371483153121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet3",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:subnet/subnet-07d317673e2291d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d317673e2291d58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "371483153121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet3"
            },
            "tags_all": {
              "Name": "public-subnet3"
            },
            "vpc_id": "vpc-039e4c7d469ae7c14"
          },
          "dependencies": [
            "module.vpc_module1.aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AWSB56-VPC1",
      "provider": "module.vpc_module1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371483153121:vpc/vpc-039e4c7d469ae7c14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0cbd1f2c78058469e",
            "default_route_table_id": "rtb-08f7fda7769e990e6",
            "default_security_group_id": "sg-034d1192655f5a6f4",
            "dhcp_options_id": "dopt-0c953fa5fdad82d8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039e4c7d469ae7c14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f7fda7769e990e6",
            "owner_id": "371483153121",
            "region": "us-east-1",
            "tags": {
              "Name": "Production"
            },
            "tags_all": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}